[gd_scene load_steps=6 format=3 uid="uid://2w8iglkkclti"]

[ext_resource type="Script" path="res://Editors/Generic/Scripts/MenuBar/Management/EditorMenuBarManager.cs" id="1_jralm"]
[ext_resource type="Script" path="res://Editors/Generic/Scripts/MenuBar/SubMenus/FileMenu.gd" id="2_sa2nq"]
[ext_resource type="Script" path="res://Editors/Generic/Scripts/MenuBar/SubMenus/EditMenu.gd" id="3_g71ob"]
[ext_resource type="Script" path="res://Editors/Generic/Scripts/MenuBar/SubMenus/ViewMenu.gd" id="4_gj3qr"]
[ext_resource type="Script" path="res://Editors/Generic/Scripts/MenuBar/SubMenus/ToolsMenu.gd" id="5_w746d"]

[node name="MenuBar" type="MenuBar" node_paths=PackedStringArray("saveAsPopup", "changeTemplatePopup", "showTemplate")]
offset_right = 1152.0
offset_bottom = 31.0
script = ExtResource("1_jralm")
saveAsPopup = NodePath("Popups/SaveAs")
changeTemplatePopup = NodePath("Popups/ChangeTemplate")
showTemplate = NodePath("Popups/Template")

[node name="File" type="PopupMenu" parent="."]
item_count = 9
item_0/text = "New..."
item_0/id = 0
item_0/disabled = true
item_1/text = "Open..."
item_1/id = 1
item_1/disabled = true
item_2/text = "Close..."
item_2/id = 2
item_2/disabled = true
item_3/text = "Save"
item_3/id = 3
item_4/text = "Save As..."
item_4/id = 4
item_5/text = ""
item_5/id = 5
item_5/separator = true
item_6/text = "Set Template..."
item_6/id = 6
item_7/text = ""
item_7/id = 7
item_7/separator = true
item_8/text = "Exit"
item_8/id = 8
script = ExtResource("2_sa2nq")

[node name="Edit" type="PopupMenu" parent="."]
item_count = 8
item_0/text = "Undo"
item_0/id = 0
item_1/text = "Redo"
item_1/id = 1
item_2/text = ""
item_2/id = 2
item_2/separator = true
item_3/text = "Edit Entry"
item_3/id = 3
item_4/text = ""
item_4/id = 6
item_4/separator = true
item_5/text = "Find..."
item_5/id = 5
item_6/text = ""
item_6/id = 6
item_6/separator = true
item_7/text = "Set default column widths"
item_7/id = 7
item_7/disabled = true
script = ExtResource("3_g71ob")

[node name="View" type="PopupMenu" parent="."]
item_count = 5
item_0/text = "Show Template file..."
item_0/id = 0
item_1/text = ""
item_1/id = 1
item_1/separator = true
item_2/text = "Descriptions"
item_2/checkable = 1
item_2/checked = true
item_2/id = 2
item_2/disabled = true
item_3/text = "Toolbar"
item_3/checkable = 1
item_3/id = 3
item_4/text = "Status Bar"
item_4/checkable = 1
item_4/checked = true
item_4/id = 4
script = ExtResource("4_gj3qr")

[node name="Tools" type="PopupMenu" parent="."]
script = ExtResource("5_w746d")

[node name="Popups" type="Node" parent="."]

[node name="ChangeTemplate" type="FileDialog" parent="Popups"]
title = "Open a File"
size = Vector2i(784, 324)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tpl")

[node name="SaveAs" type="FileDialog" parent="Popups"]
title = "Save as"
size = Vector2i(784, 324)
access = 2
filters = PackedStringArray("*.dbr")

[node name="Template" type="AcceptDialog" parent="Popups"]
title = "Template file"

[node name="PathText" type="Label" parent="Popups/Template"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[connection signal="exit" from="File" to="." method="_on_file_exit"]
[connection signal="id_pressed" from="File" to="File" method="_on_id_pressed"]
[connection signal="save" from="File" to="." method="_on_file_save"]
[connection signal="save_as" from="File" to="." method="_on_file_save_as"]
[connection signal="set_template" from="File" to="." method="_on_file_set_template"]
[connection signal="edit_entry" from="Edit" to="." method="_on_edit_edit_entry"]
[connection signal="find" from="Edit" to="." method="_on_edit_find"]
[connection signal="id_pressed" from="Edit" to="Edit" method="_on_id_pressed"]
[connection signal="redo" from="Edit" to="." method="_on_edit_redo"]
[connection signal="set_default_width" from="Edit" to="." method="_on_edit_set_default_width"]
[connection signal="undo" from="Edit" to="." method="_on_edit_undo"]
[connection signal="id_pressed" from="View" to="View" method="_on_id_pressed"]
[connection signal="show_template" from="View" to="." method="_on_view_show_template"]
[connection signal="toggle_descriptions" from="View" to="." method="_on_view_toggle_descriptions"]
[connection signal="toggle_statusbar" from="View" to="." method="_on_view_toggle_statusbar"]
[connection signal="toggle_toolbar" from="View" to="." method="_on_view_toggle_toolbar"]
[connection signal="id_pressed" from="Tools" to="Tools" method="_on_id_pressed"]
